2011-01-11  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: "Audit present state" always disabled
        https://bugs.webkit.org/show_bug.cgi?id=52199

        Removed all traces of resource tracking checks, as we have it no more.

        * English.lproj/localizedStrings.js:
        * inspector/front-end/AuditLauncherView.js:
        (WebInspector.AuditLauncherView.prototype._createLauncherUI):
        * inspector/front-end/AuditsPanel.js:

2011-01-11  Pavel Podivilov  <podivilov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: move delayed search implementation to SourceFrame.
        https://bugs.webkit.org/show_bug.cgi?id=51753

        * inspector/front-end/SourceFrame.js:
        (WebInspector.SourceFrame.prototype._createViewerIfNeeded):
        (WebInspector.SourceFrame.prototype.findSearchMatches):
        (WebInspector.SourceFrame.prototype.cancelFindSearchMatches):
        * inspector/front-end/SourceView.js:
        (WebInspector.SourceView.prototype.hide):
        (WebInspector.SourceView.prototype.searchCanceled):
        (WebInspector.SourceView.prototype.performSearch.didFindSearchMatches):
        (WebInspector.SourceView.prototype.performSearch):

2011-01-11  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: innerFirstChild has a side effect which should be called explicitly.

        If a node is a frame's owner then innerFirstChild method
        subscribes DOMAgent instance to the frame's doc's events.
        I think this should be done explicitly when we meet with
        the node for the first time. As I understand it happens
        in buildArrayForContainerChildren method.

        https://bugs.webkit.org/show_bug.cgi?id=52204

        * inspector/InspectorDOMAgent.cpp:
        (WebCore::InspectorDOMAgent::startListeningFrameDoc):
        (WebCore::InspectorDOMAgent::buildArrayForContainerChildren):